--- a/styles.css
+++ b/styles.css
@@ -65,5 +65,24 @@ h2 {
   border-color: var(--error-color);
 }
 .form-control small {
-  border-color: var(--error-color);
+color: var(--error-color);
+position: absolute;
+bottom: 0;
+left: 0;
+visibility: hidden;
+}
+.form-control.error small{
+    visibility: visible;
+}
+.form button{
+    cursor: pointer;
+    background-color: #3498db;
+    border-radius: 4px;
+    border: 2px solid #3498db;
+    padding: 10px;
+    width: 100%;
+    color: #fff;
+    display: block;
+    font-size: 16px;
+    margin-top: 20px;
 }
