--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ h2 {
   position: relative;
 }
 .form-control label {
-  color: #777;
+  color: white;
   display: block;
   margin-bottom: 5px;
 }
